--- a/app_server/views/generic-text.pug
+++ b/app_server/views/generic-text.pug
@@ -9,3 +9,7 @@ block content
                 | Welcome to CakeHouse, where sweet dreams come to life! Nestled in the heart of culinary creativity, CakeHouse is more than just a bakery; it's a haven for dessert enthusiasts and cake connoisseurs alike. Our story began with a passion for crafting delectable delights that tantalize taste buds and leave lasting memories. Every cake we create is a masterpiece, baked with love, creativity, and the finest ingredients.  At CakeHouse, we believe in the magic of celebrations and the power of a perfectly baked cake to bring people together.
             p
                 | Thankyou for Visiting!
+            p 
+                | Contact: 9581776589
+            p 
+                | Email: info@cakehouse.in
